--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "crossroads": "^0.12.2",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0"
   },
