--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bootstrap": "^4.3.1",
     "crossroads": "^0.12.2",
     "jquery": "^3.4.1",
-    "popper.js": "^1.15.0"
+    "popper.js": "^1.15.0",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "css-loader": "^2.1.1",
