--- a/now.json
+++ b/now.json
@@ -1,6 +1,6 @@
 {
   "name": "Star Wars API",
-  "version": "1.0",
+  "version": 1.0,
   "builds": [
     { "public/partials": "*.html", "use": "@now/static" }
   ]
