--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack && webpack-dev-server --open"
+    "start": "webpack && webpack-dev-server --open",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
